Use dist/index.js as entry point

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-verification-input",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "repository": "https://github.com/andreaswilli/react-verification-input.git",
   "author": "Andreas Willi",
   "license": "MIT",
