--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.1.0",
   "main": "dist/index.js",
   "repository": "https://github.com/andreaswilli/react-verification-input.git",
+  "description": "WORK IN PROGRESS",
   "author": "Andreas Willi",
   "license": "MIT",
+  "scripts": {
+    "serve": "webpack --watch"
+  },
   "dependencies": {
     "path": "^0.12.7",
     "react": "^16.2.0",
@@ -15,6 +19,12 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2017": "^6.24.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "classnames": "^2.2.5",
+    "css-loader": "^0.28.7",
+    "node-sass": "^4.7.2",
+    "proptypes": "^1.1.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0"
   }
 }
