Configure production build

--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "author": "Andreas Willi",
   "license": "MIT",
   "scripts": {
-    "serve": "webpack --watch",
+    "build": "webpack",
+    "build:prod": "webpack -p",
+    "serve": "webpack -d --watch",
     "major": "npm version major && npm publish",
     "minor": "npm version minor && npm publish",
     "patch": "npm version patch && npm publish"
   },
   "dependencies": {
-    "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "webpack": "^3.9.1"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "classnames": "^2.2.5",
