--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "patch": "npm version patch && npm publish"
   },
   "dependencies": {
+    "postcss-loader": "^2.1.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "webpack": "^3.9.1"
