--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "postcss-loader": "^2.1.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "webpack": "^3.9.1"
+    "webpack": "^4.44.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -27,10 +27,11 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "classnames": "^2.2.5",
-    "css-loader": "^0.28.7",
-    "node-sass": "^4.7.2",
+    "css-loader": "^4.3.0",
+    "node-sass": "^4.14.1",
     "proptypes": "^1.1.0",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0"
+    "style-loader": "^0.19.0",
+    "webpack-cli": "^3.3.12"
   }
 }
