--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "webpack",
     "build:prod": "webpack -p",
     "serve": "webpack --watch",
+    "test": "jest",
     "major": "npm version major && npm publish",
     "minor": "npm version minor && npm publish",
     "patch": "npm version patch && npm publish"
@@ -40,13 +41,18 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
+    "@testing-library/user-event": "^12.1.6",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.0",
     "classnames": "^2.2.5",
     "css-loader": "^4.3.0",
+    "jest": "^26.4.2",
     "node-sass": "^4.14.1",
     "proptypes": "^1.1.0",
+    "regenerator-runtime": "^0.13.7",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack-cli": "^3.3.12"
