--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "css-loader": "^4.3.0",
     "jest": "^26.4.2",
     "node-sass": "^4.14.1",
-    "proptypes": "^1.1.0",
+    "prop-types": "^15.7.2",
     "regenerator-runtime": "^0.13.7",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
