--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "build:prod": "webpack -p",
     "serve": "webpack --watch",
     "test": "jest",
-    "major": "npm version major && npm publish",
-    "minor": "npm version minor && npm publish",
-    "patch": "npm version patch && npm publish"
+    "bump-major": "npm version major",
+    "bump-minor": "npm version minor",
+    "bump-patch": "npm version patch",
+    "bump-premajor": "npm version premajor --preid beta",
+    "bump-preminor": "npm version preminor --preid beta",
+    "bump-prepatch": "npm version prepatch --preid beta",
+    "bump-prerelease": "npm version prerelease",
+    "publish": "npm publish"
   },
   "dependencies": {
     "postcss-loader": "^2.1.6",
