--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "webpack",
     "build:prod": "webpack -p",
     "serve": "webpack --watch",
-    "test": "jest",
+    "lint": "eslint src",
+    "test": "jest --coverage",
     "bump-major": "npm version major",
     "bump-minor": "npm version minor",
     "bump-patch": "npm version patch",
@@ -56,6 +57,10 @@
     "babel-loader": "^8.0.0",
     "classnames": "^2.2.5",
     "css-loader": "^4.3.0",
+    "eslint": "^7.10.0",
+    "eslint-plugin-jest": "^24.0.2",
+    "eslint-plugin-react": "^7.21.3",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "jest": "^26.4.2",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
