Set preid for prereleases

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "bump-premajor": "npm version premajor --preid beta",
     "bump-preminor": "npm version preminor --preid beta",
     "bump-prepatch": "npm version prepatch --preid beta",
-    "bump-prerelease": "npm version prerelease",
+    "bump-prerelease": "npm version prerelease --preid beta",
     "push-tags": "git push --follow-tags",
     "publish": "npm publish",
     "publish-beta": "npm publish --tag beta"
