Add typescript declaration file

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-verification-input",
   "version": "2.0.0-beta.6",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/andreaswilli/react-verification-input.git",
   "description": "Customizable, masked input, which can be used for all sorts of codes.",
   "author": "Andreas Willi",
@@ -53,6 +54,7 @@
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.0",
     "classnames": "^2.2.5",
+    "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^4.3.0",
     "eslint": "^7.10.0",
     "eslint-plugin-jest": "^24.0.2",
