--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -12,8 +12,8 @@
 name: "CodeQL"
 
 on:
-  # push:
-  #   branches: [ master ]
+  push:
+    branches: [ master, develop ]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ master, develop ]
