--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
-    "build:prod": "webpack -p",
+    "build:prod": "webpack --mode=production",
     "serve": "webpack --watch",
     "lint": "eslint src",
     "test": "jest --coverage",
@@ -51,25 +51,21 @@
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^13.1.9",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.4.2",
+    "babel-jest": "^27.0.2",
     "babel-loader": "^8.0.0",
     "classnames": "^2.2.5",
-    "copy-webpack-plugin": "^6.4.1",
-    "css-loader": "^4.3.0",
+    "copy-webpack-plugin": "^9.0.0",
+    "css-loader": "^5.2.6",
     "eslint": "^7.10.0",
     "eslint-plugin-jest": "^24.0.2",
     "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-react-hooks": "^4.1.2",
-    "jest": "^26.4.2",
-    "node-sass": "^6.0.0",
-    "postcss-loader": "^2.1.6",
+    "jest": "^27.0.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "regenerator-runtime": "^0.13.7",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2"
   }
 }
