Allow onChange callback to be used with internal state
The state is managed by the component but value changes can still be observed.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "webpack",
     "build:prod": "webpack --mode=production",
-    "serve": "webpack --watch",
+    "serve": "webpack --watch --mode=production",
     "lint": "eslint src",
     "test": "jest --coverage",
     "bump-major": "npm version major",
