--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -1,6 +1,12 @@
 name: Lint and Test
 
-on: [push]
+on:
+  pull_request:
+    
+  push:
+    branches:
+      - master
+      - develop
 
 jobs:
   lintAndTest:
