--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "regenerator-runtime": "^0.13.7",
-    "webpack": "^5.38.1",
+    "webpack": "^5.74.0",
     "webpack-cli": "^4.7.2"
-  }
+  },
+  "dependencies": {}
 }
