--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.3.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^27.0.2",
+    "babel-jest": "^28.1.3",
     "babel-loader": "^8.0.0",
     "classnames": "^2.2.5",
     "copy-webpack-plugin": "^9.0.0",
@@ -63,7 +63,8 @@
     "eslint-plugin-jest": "^24.0.2",
     "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-react-hooks": "^4.1.2",
-    "jest": "^27.0.4",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
