--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "serve": "webpack --watch --mode=production",
     "lint": "eslint src",
     "test": "jest --coverage",
-    "docs": "yarn build:prod && cd docs-src && next build && next export -o ../docs",
+    "docs": "yarn build:prod && cd docs-src && yarn next build && yarn next export -o ../docs",
     "bump-major": "npm version major",
     "bump-minor": "npm version minor",
     "bump-patch": "npm version patch",
