--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "push-tags": "git push --follow-tags",
     "publish-beta": "npm publish --tag beta"
   },
-  "files": [
-    "lib/"
-  ],
+  "files": ["lib/"],
   "peerDependencies": {
     "react": "16.8.0 - 18.x.x",
     "react-dom": "16.8.0 - 18.x.x"
@@ -55,23 +53,23 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.3.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^28.1.3",
-    "babel-loader": "^8.0.0",
+    "babel-jest": "^29.0.0",
+    "babel-loader": "^9.0.0",
     "classnames": "^2.2.5",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "eslint": "^8.21.0",
-    "eslint-plugin-jest": "^26.8.2",
+    "eslint-plugin-jest": "^27.0.0",
     "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-react-hooks": "^4.1.2",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.0.0",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "regenerator-runtime": "^0.13.7",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^5.0.0"
   },
   "dependencies": {}
 }
