--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "serve": "webpack --watch --mode=production",
     "lint": "eslint src",
     "test": "jest --coverage",
-    "docs": "yarn build:prod && cd docs-src && BASE_PATH=/react-verification-input yarn next build && yarn next export -o ../docs && cd - && touch docs/.nojekyll",
+    "docs": "yarn build:prod && cd docs-src && yarn copyReadme && BASE_PATH=/react-verification-input yarn next build && yarn next export -o ../docs && cd - && touch docs/.nojekyll",
     "bump-major": "npm version major",
     "bump-minor": "npm version minor",
     "bump-patch": "npm version patch",
